<resources>
    <string name="app_name">Get Taxi</string>
    <string name="action_settings">Settings</string>
    <string name="action_getTaxi">Get Taxi</string>
    <string name="enter_details">Enter details</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>


</resources>
